WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145823
Takes two delete key presses to delete pasted emoji up-pointing index finger with skin tone
https://bugs.webkit.org/show_bug.cgi?id=145823
Summary
Takes two delete key presses to delete pasted emoji up-pointing index finger ...
Darin Adler
Reported
2015-06-09 16:13:00 PDT
Takes two delete key presses to delete pasted emoji up-pointing index finger with skin tone
Attachments
Patch
(15.58 KB, patch)
2015-06-09 16:16 PDT
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2015-06-09 16:16:58 PDT
Created
attachment 254612
[details]
Patch
Darin Adler
Comment 2
2015-06-09 16:17:56 PDT
<
rdar://problem/20966101
>
WebKit Commit Bot
Comment 3
2015-06-09 16:20:26 PDT
Attachment 254612
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderText.cpp:1410: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 4
2015-06-09 16:26:29 PDT
Comment on
attachment 254612
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254612&action=review
> Source/WebCore/rendering/RenderText.cpp:1444 > + // FIXME: Seems like this fancier case could be used on all platforms now, no > + // need for the #else case below.
What about Windows?
Darin Adler
Comment 5
2015-06-09 16:31:38 PDT
Comment on
attachment 254612
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254612&action=review
>> Source/WebCore/rendering/RenderText.cpp:1444 >> + // need for the #else case below. > > What about Windows?
I think it would be OK to have Windows take on this behavior.
Darin Adler
Comment 6
2015-06-09 16:50:20 PDT
Committed
r185393
: <
http://trac.webkit.org/changeset/185393
>
Alexey Proskuryakov
Comment 7
2015-06-09 20:51:42 PDT
Comment on
attachment 254612
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254612&action=review
> Source/WebCore/rendering/RenderText.cpp:1440 > + // FIXME: Unclear why this has so much handrolled code rather than using TextBreakIterator.
I'm not sure what this question asks. The behaviors are just different, because user expectations are different for deleting and for moving the insertion point. There are some test cases, although it's likely not fully covered. We should just keep the behavior 100% identical to AppKit.
>>> Source/WebCore/rendering/RenderText.cpp:1444 >>> + // need for the #else case below. >> >> What about Windows? > > I think it would be OK to have Windows take on this behavior.
We investigated the behavior of Windows applications at the time, and matched it. I don't know if existing Windows WebKit clients prefer Mac or Windows behavior for editing now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug